# fast_gicp

./: .gitmodules  CMakeLists.txt
include/fast_gicp/gicp/: fast_gicp_st.hpp
include/fast_gicp/gicp/nvbio/: iterator.h  popcount.h  priority_queue.h  string_traits.h  types.h  vector_view.h
src/fast_gicp/cuda/: brute_force_knn.cu
src/test/: gicp_test.cpp
